@@ -1,31 +1,50 @@
 ---
+sudo: false
 language: ruby
-# temporary workaround for travis issue #1793
-# see: https://github.com/travis-ci/travis-ci/issues/1793
 before_install:
-  - gem update --system 2.1.11
   - gem --version
 rvm:
   - 1.8.7
   - 1.9.3
   - 2.0.0
+  - 2.1
+  - 2.2
     #  - ruby-head
+
+bundler_args: --without acceptance_tests
+
 script: "bundle exec rake spec SPEC_OPTS='--format documentation'"
-branches:
-  only:
-    master
 env:
   matrix:
     - PUPPET_GEM_VERSION="~> 2.7.0"
     - PUPPET_GEM_VERSION="~> 3.0.0"
     - PUPPET_GEM_VERSION="~> 3.1.0"
     - PUPPET_GEM_VERSION="~> 3.2.0"
+    - PUPPET_GEM_VERSION="~> 3.3.0"
+    - PUPPET_GEM_VERSION="~> 3.4.0"
+    - PUPPET_GEM_VERSION="~> 3.5.0"
+    - PUPPET_GEM_VERSION="~> 3.6.0"
+    - PUPPET_GEM_VERSION="~> 3.7.0"
+    - PUPPET_GEM_VERSION="~> 3.8.0"
+    - PUPPET_GEM_VERSION="~> 4.0.0"
+    - PUPPET_GEM_VERSION="~> 4.1.0"
+    - PUPPET_GEM_VERSION="~> 4.2.0"
+    - PUPPET_GEM_VERSION="~> 4.3.0"
+    - PUPPET_GEM_VERSION="~> 4.4.0"
 matrix:
   allow_failures:
     # - rvm: ruby-head
   exclude:
     - rvm: 1.8.7
-      env: PUPPET_GEM_VERSION="~> 2.7.0"
+      env: PUPPET_GEM_VERSION="~> 4.0.0"
+    - rvm: 1.8.7
+      env: PUPPET_GEM_VERSION="~> 4.1.0"
+    - rvm: 1.8.7
+      env: PUPPET_GEM_VERSION="~> 4.2.0"
+    - rvm: 1.8.7
+      env: PUPPET_GEM_VERSION="~> 4.3.0"
+    - rvm: 1.8.7
+      env: PUPPET_GEM_VERSION="~> 4.4.0"
     - rvm: 1.9.3
       env: PUPPET_GEM_VERSION="~> 2.7.0"
     - rvm: 2.0.0
@@ -34,5 +53,35 @@ matrix:
       env: PUPPET_GEM_VERSION="~> 3.0.0"
     - rvm: 2.0.0
       env: PUPPET_GEM_VERSION="~> 3.1.0"
+    - rvm: 2.1
+      env: PUPPET_GEM_VERSION="~> 2.7.0"
+    - rvm: 2.1
+      env: PUPPET_GEM_VERSION="~> 3.0.0"
+    - rvm: 2.1
+      env: PUPPET_GEM_VERSION="~> 3.1.0"
+    - rvm: 2.1
+      env: PUPPET_GEM_VERSION="~> 3.2.0"
+    - rvm: 2.1
+      env: PUPPET_GEM_VERSION="~> 3.3.0"
+    - rvm: 2.2
+      env: PUPPET_GEM_VERSION="~> 2.7.0"
+    - rvm: 2.2
+      env: PUPPET_GEM_VERSION="~> 3.0.0"
+    - rvm: 2.2
+      env: PUPPET_GEM_VERSION="~> 3.1.0"
+    - rvm: 2.2
+      env: PUPPET_GEM_VERSION="~> 3.2.0"
+    - rvm: 2.2
+      env: PUPPET_GEM_VERSION="~> 3.3.0"
+    - rvm: 2.2
+      env: PUPPET_GEM_VERSION="~> 3.4.0"
+    - rvm: 2.2
+      env: PUPPET_GEM_VERSION="~> 3.5.0"
+    - rvm: 2.2
+      env: PUPPET_GEM_VERSION="~> 3.6.0"
+    - rvm: 2.2
+      env: PUPPET_GEM_VERSION="~> 3.7.0"
+    - rvm: 2.2
+      env: PUPPET_GEM_VERSION="~> 3.8.0"
 notifications:
   email: false
